crates/wac-parser/tests/resolution/fail/duplicate-flag.wac
package test:comp;

flags f {
    a,
    b,
    c,
    d,
    a,
}